# sbobinator

./: .env.example  .gitignore  404.html  COPYRIGHT  LICENSE  LICENSE.it  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  start.bat
.cursor/rules/: no-powershell-scripts.mdc
.github/workflows/: docs.yml
.streamlit/: config.toml
architecture/data-flow/: index.html
architecture/overview/: index.html
architecture/storage/: index.html
architecture/worker/: index.html
bug-fix/: FIX-CODA-STORICO-UI.md  FIX-RIASSUNTO-LLM.md  TRACCIAMENTO-BUG.md
changelog/: index.html
deployment/docker/: index.html
deployment/environment/: index.html
deployment/local-windows/: index.html
development/contributing/: index.html
development/project-structure/: index.html
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml
docs/: changelog.md  index.md
docs/architecture/: storage.md  worker.md
docs/deployment/: docker.md  environment.md  local-windows.md
docs/development/: contributing.md  project-structure.md
docs/en/: changelog.md  index.md
docs/en/architecture/: data-flow.md  overview.md  storage.md  worker.md
docs/en/deployment/: docker.md  environment.md  local-windows.md
docs/en/development/: contributing.md  project-structure.md
docs/en/getting-started/: hardware.md  installation.md  models.md  overview.md  quickstart.md
docs/en/operations/: benchmark.md  maintenance.md  scripts.md
docs/en/reference/: cli-reference.md  commercial-license.md  configuration.md  faq.md  glossary.md  job-schema.md  licenses.md  modules.md
docs/en/troubleshooting/: common-issues.md  ssl-windows.md
docs/en/user-guide/: cli.md  file-formats.md  jobs-queue.md  summarization.md  web-ui.md
docs/getting-started/: installation.md  models.md  quickstart.md
docs/it/: changelog.md  index.md
docs/it/architecture/: data-flow.md  overview.md  worker.md
docs/it/development/: contributing.md  project-structure.md
docs/it/getting-started/: hardware.md  models.md  overview.md  quickstart.md
docs/it/operations/: benchmark.md  maintenance.md  scripts.md
docs/it/reference/: commercial-license.md  configuration.md  faq.md  licenses.md
docs/it/troubleshooting/: common-issues.md
docs/it/user-guide/: file-formats.md  jobs-queue.md  web-ui.md
docs/operations/: scripts.md
docs/reference/: cli-reference.md  configuration.md  faq.md  glossary.md  job-schema.md  licenses.md  modules.md
docs/summary-benchmark/: README.md
docs/troubleshooting/: ssl-windows.md
docs/user-guide/: cli.md  jobs-queue.md  summarization.md  web-ui.md
evolutive/: ARCHITETTURA-FUTURA.md  CASI-D-USO.md  README.md  ROADMAP-EVOLUTIVE.md
getting-started/hardware/: index.html
getting-started/installation/: index.html
getting-started/models/: index.html
getting-started/overview/: index.html
getting-started/quickstart/: index.html
microevolutive/: PLAN_BACKLOG.md  PLAN_DESKTOP_TAURI.md  PLAN_MULTILANG_ASR.md  PLAN_MULTILANG_SUMMARY.md  README.md
models/: .gitkeep
operations/benchmark/: index.html
operations/maintenance/: index.html
operations/scripts/: index.html
reference/cli-reference/: index.html
reference/configuration/: index.html
reference/faq/: index.html
reference/glossary/: index.html
reference/job-schema/: index.html
reference/licenses/: index.html
reference/modules/: index.html
requirements/: README.md  local.txt  summarize.txt  ui.txt
scripts/: benchmark_monitor.py  clean_output.py  download-model.ps1  download_model.py  download_summary_llm.py  download_summary_model.py  ensure_local_summary_llm.py  generate_samples.py  install-local.ps1  install_local.py  publish_docs.bat  publish_docs.py  restart_ui.py  summary_benchmark.py
search/: search_index.json
src/sbobinator/: __init__.py  __main__.py  cli.py  config.py  export.py  extract.py  http_ssl.py  jobs.py  license_info.py  local_llm_download.py  pipeline.py  summarize.py  summary_config.py  transcribe.py  worker.py
src/sbobinator/ui/: app.py  (+5 more)
summary-benchmark/: index.html
troubleshooting/common-issues/: index.html
troubleshooting/ssl-windows/: index.html
user-guide/cli/: index.html
user-guide/file-formats/: index.html
user-guide/jobs-queue/: index.html
user-guide/summarization/: index.html
user-guide/web-ui/: index.html
(+24 files in other folders)
