[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbobinator"
version = "0.2.0"
description = "Sbobina audio e video in testo con NVIDIA NeMo (italiano)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sbobinator" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
asr = [
    "torch>=2.7",
    "nemo_toolkit[asr]>=2.0",
]
ui = [
    "streamlit>=1.40",
]
summarize = [
    "transformers>=4.40",
    "sentencepiece>=0.2",
]
local = [
    "torch>=2.7",
    "nemo_toolkit[asr]>=2.0",
    "streamlit>=1.40",
    "transformers>=4.40",
    "sentencepiece>=0.2",
]
dev = [
    "ruff>=0.8",
]

[project.scripts]
sbobina = "sbobinator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
