[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbobinator"
version = "0.3.0"
description = "Sbobina audio e video in testo con NVIDIA NeMo (italiano)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sbobinator" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
asr = [
    "torch>=2.7",
    "nemo_toolkit[asr]>=2.0",
]
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
]
summarize = [
    "transformers>=4.40",
    "sentencepiece>=0.2",
]
local = [
    "torch>=2.7",
    "nemo_toolkit[asr]>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "transformers>=4.40",
    "sentencepiece>=0.2",
]
dev = [
    "ruff>=0.8",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
sbobina = "sbobinator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sbobinator = ["ui/templates/**/*", "ui/static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
